search bar experience search Icon alignment issue fixed

--- a/src/templatemanager/templates/fullsearchResultTopdownTemplate/fullsearchResultTopdownTemplate.scss
+++ b/src/templatemanager/templates/fullsearchResultTopdownTemplate/fullsearchResultTopdownTemplate.scss
@@ -863,13 +863,13 @@
         }
         .search-bar{
             .widget-icon{
-                bottom: 15px;
-                left: 16px;
+                bottom: 11px;
+                left: 14px;
                 width: 16px;
                 height: 16px;
                 img{
-                    width: 13px;
-                    height: 13px;
+                    width: 16px;
+                    height: 16px;
                 }
             }
         }
